<resources>
    <string name="app_name">Let\'s Chat</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="newaccount">Create New Account!</string>
    <string name="alreayaccount">Already have an Account?</string>
    <string name="otherlogin">OR</string>
    <string name="phone_number">Phone Number</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_email">Enter Email-Id</string>
    <string name="user_name">Username</string>
    <string name="add_status">Add your status</string>
    <string name="update_profile">Update Profile</string>
    <string name="phone_number_login">Phone Number Login</string>
    <string name="verification_code">Verification Code</string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="verify_code">Verify Code</string>
    <string name="phone_info">Enter Phone Number with Country Code</string>
    <string name="status">Status</string>
    <string name="send_message">Send Message</string>
    <string name="cancel_chat_request">Cancel Chat Request</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="last_seen">Last seen</string>

    //Menu String
    <string name="find_friends">Find Friends</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="create_group">Create New Group</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>