<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PhoneLoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_50sdp"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/logo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_login">

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/phone_number_login"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtLogin"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/bg_edittext"
            android:drawableStart="@drawable/ic_baseline_phone_white"
            android:drawablePadding="@dimen/_8sdp"
            android:fontFamily="@font/roboto"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />
        <TextView
            android:id="@+id/txtPhoneInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/phone_info"
            android:textColor="@color/gray"
            android:textSize="@dimen/_11ssp"
            android:layout_below="@id/edtPhoneNumber"/>


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtPhoneNumber"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/bg_edittext"
            android:drawableStart="@drawable/ic_baseline_verified_user_24"
            android:drawablePadding="@dimen/_8sdp"
            android:fontFamily="@font/roboto"
            android:hint="@string/verification_code"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:visibility="gone"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnVerify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtCode"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_50sdp"
            android:padding="@dimen/_8sdp"
            android:background="@drawable/bg_login_btn"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/send_verification_code"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtCode"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_50sdp"
            android:padding="@dimen/_8sdp"
            android:background="@drawable/bg_login_btn"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/verify_code"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:visibility="gone"/>

    </RelativeLayout>

</RelativeLayout>