<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_50sdp"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/logo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_login">

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/register"
            android:layout_marginTop="@dimen/_20sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtRegister"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/bg_edittext"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="@dimen/_8sdp"
            android:fontFamily="@font/roboto"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtEmail"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/bg_edittext"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="@dimen/_8sdp"
            android:fontFamily="@font/roboto"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtPassword"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:padding="@dimen/_8sdp"
            android:background="@drawable/bg_login_btn"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"/>

        <TextView
            android:id="@+id/txtnewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/alreayaccount"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:padding="@dimen/_3sdp"
            android:fontFamily="@font/roboto_medium"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btnRegister"/>

        <TextView
            android:id="@+id/txtotherRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/otherlogin"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/roboto_medium"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/txtnewAccount"/>

        <TextView
            android:id="@+id/txtPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_below="@id/txtotherRegister"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_vertical"
            android:drawableStart="@drawable/ic_baseline_phone_iphone_24"
            android:drawablePadding="@dimen/_8sdp"
            android:background="@drawable/bg_login_btn"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</RelativeLayout>