<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SettingsActivity"
    android:background="@color/bgblack">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/white"
        android:layout_below="@id/toolbar"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgUser"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:src="@drawable/ic_baseline_person_24"
        app:civ_border_color="@color/white"
        app:civ_border_width="@dimen/_2sdp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="@dimen/_10sdp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/roboto"
        android:layout_below="@+id/imgUser"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/bg_edittext"
        android:padding="@dimen/_12sdp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_status"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/roboto"
        android:layout_below="@+id/edtUserName"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/bg_edittext"
        android:padding="@dimen/_12sdp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUpdateProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_profile"
        android:textSize="@dimen/_14ssp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto"
        android:background="@drawable/bg_login_btn"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>