<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_6sdp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_85sdp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgUser"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_85sdp"
                android:src="@drawable/ic_baseline_person_24"
                android:background="@color/lightblack"
                android:padding="@dimen/_10sdp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imgUser"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_2sdp">

                <LinearLayout
                    android:id="@+id/llUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:padding="@dimen/_3sdp"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/txtUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.3"
                        android:text="@string/user_name"
                        android:textSize="@dimen/_12ssp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/roboto_medium"/>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imgStatus"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_weight="0.7"
                        app:srcCompat="@drawable/ic_online"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:visibility="gone"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/txtUserStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textSize="@dimen/_11ssp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:padding="@dimen/_3sdp"
                    android:layout_below="@id/llUserName"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_marginEnd="@dimen/_3sdp"
                    android:paddingBottom="@dimen/_3sdp"
                    android:layout_alignParentBottom="true">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnAccept"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/bg_accept_btn"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:text="@string/accept"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_11ssp"
                        android:visibility="gone"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/bg_cancel_btn"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:text="@string/cancel"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp"
                        android:visibility="gone"/>

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>



    </androidx.cardview.widget.CardView>

</RelativeLayout>